--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </li>
         </ul>
 
-        <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+        <img src="img/logo.svg" alt="Logo da Alurabooks" class="container__imagem">
         <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
 </div>
 
@@ -185,7 +185,7 @@
                 </p>
             </div>
             <!-- 2º coluna -->
-            <img src="img/Escritora.svg" class="descrição__imagem">
+            <img src="img/escritora.svg" class="descrição__imagem">
         </div>
 
         <!-- 2º linha -->
